--- a/index.html
+++ b/index.html
@@ -472,24 +472,24 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1500">
-                    <div class="projects contact-project">
-                        <div class="project-inner text-center">
+                    <div class="contact-project">
+                        <div class="text-center">
                             <img src="img/call-icon.png" alt="">
                             <p> +880 1758 066 329</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1500">
-                    <div class="projects contact-project">
-                        <div class="project-inner text-center">
+                    <div class="contact-project">
+                        <div class="text-center">
                             <img src="img/mail-icon.png" alt="">
                             <p>sstech@shikhbeshobai.com</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1500">
-                    <div class="projects contact-project">
-                        <div class="project-inner text-center">
+                    <div class="contact-project">
+                        <div class="text-center">
                             <img src="img/place-icon.png" alt="">
                             <p>Road# 7, Block# H, Banani</p>
                         </div>
